# universal-DRF-foundation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: check_schema.py  export_meta.py  run_schemathesis.py  run_schemathesis.sh
.github/workflows/: ci.yaml
openapi/: schema.yaml
src/config/: permissions.py  settings.py  settings_env.py  urls.py
src/health/: serializers.py  urls.py  views.py
tests/: conftest.py  test_health.py
